feat(KFLUXUI-973): add visualization reports with GitHub integration
- Generate box plots showing team performance distribution across phases
- Upload PNG charts to GitHub repository for embedding
- Create Google Sheets visualization with embedded charts
- Add --no-visualization flag and config support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
     "google-auth-oauthlib>=1.1.0",
     "google-auth-httplib2>=0.1.1",
     "google-api-python-client>=2.100.0",
+    # Visualization support for charts generation
+    "matplotlib>=3.7.0",
 ]
 
 [project.optional-dependencies]
