--- a/.github/workflows/generate-reports.yml
+++ b/.github/workflows/generate-reports.yml
@@ -110,20 +110,10 @@ jobs:
 
       - name: Setup Google Credentials
         if: steps.check_files.outputs.skip != 'true' || steps.pr_context.outputs.is_pr == 'false'
+        env:
+          GOOGLE_CREDENTIALS_BASE64: ${{ secrets.GOOGLE_CREDENTIALS_BASE64 }}
         run: |
-          if [ -n "${{ secrets.GOOGLE_CREDENTIALS_BASE64 }}" ]; then
-            echo "${{ secrets.GOOGLE_CREDENTIALS_BASE64 }}" | base64 -d > /tmp/google-credentials.json
-            # Verify the file was created and is valid JSON
-            if [ -f /tmp/google-credentials.json ] && python3 -m json.tool /tmp/google-credentials.json > /dev/null 2>&1; then
-              echo "GOOGLE_CREDENTIALS_FILE=/tmp/google-credentials.json" >> $GITHUB_ENV
-              echo "✓ Google credentials configured successfully"
-            else
-              echo "⚠️  Failed to create valid credentials file, uploads will be skipped"
-            fi
-          else
-            echo "ℹ️  GOOGLE_CREDENTIALS_BASE64 not set, Google Sheets uploads will be skipped"
-            echo "   To enable uploads, add GOOGLE_CREDENTIALS_BASE64 secret in repository settings"
-          fi
+          bash .github/scripts/setup-google-credentials.sh
 
       - name: Determine config path
         if: steps.check_files.outputs.skip != 'true' || steps.pr_context.outputs.is_pr == 'false'
@@ -186,6 +176,7 @@ jobs:
           JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CHARTS_UPLOAD_TOKEN: ${{ secrets.CHARTS_UPLOAD_TOKEN }}
           GOOGLE_SPREADSHEET_ID: ${{ secrets.GOOGLE_SPREADSHEET_ID }}
         run: |
           echo "=========================================="
@@ -214,6 +205,7 @@ jobs:
           JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CHARTS_UPLOAD_TOKEN: ${{ secrets.CHARTS_UPLOAD_TOKEN }}
           GOOGLE_SPREADSHEET_ID: ${{ secrets.GOOGLE_SPREADSHEET_ID }}
         run: |
           AGGREGATION_CONFIG="${{ steps.config.outputs.config_dir }}/aggregation_config.yaml"
@@ -303,6 +295,7 @@ jobs:
       - name: Generate Aggregated Reports
         if: (steps.check_files.outputs.skip != 'true' || steps.pr_context.outputs.is_pr == 'false') && steps.config.outputs.is_aggregation == 'true'
         env:
+          CHARTS_UPLOAD_TOKEN: ${{ secrets.CHARTS_UPLOAD_TOKEN }}
           GOOGLE_SPREADSHEET_ID: ${{ secrets.GOOGLE_SPREADSHEET_ID }}
         run: |
           AGGREGATION_CONFIG="${{ steps.config.outputs.config_dir }}/aggregation_config.yaml"
@@ -349,6 +342,7 @@ jobs:
           JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CHARTS_UPLOAD_TOKEN: ${{ secrets.CHARTS_UPLOAD_TOKEN }}
           GOOGLE_SPREADSHEET_ID: ${{ secrets.GOOGLE_SPREADSHEET_ID }}
           SMTP_USER: ${{ secrets.MAIL_APP_USER }}
           SMTP_PASSWORD: ${{ secrets.MAIL_APP_PASSWORD }}
@@ -435,7 +429,7 @@ jobs:
       - name: Send Email Notifications (Aggregation Mode Only)
         id: email_notifications
         if: (steps.check_files.outputs.skip != 'true' || steps.pr_context.outputs.is_pr == 'false') && steps.config.outputs.is_aggregation == 'true'
-        continue-on-error: true  # Don't fail the workflow if email sending fails
+        continue-on-error: true # Don't fail the workflow if email sending fails
         env:
           SMTP_USER: ${{ secrets.MAIL_APP_USER }}
           SMTP_PASSWORD: ${{ secrets.MAIL_APP_PASSWORD }}
@@ -473,6 +467,7 @@ jobs:
             reports/**/*.tsv
             reports/**/*.json
             reports/**/*.txt
+            reports/**/*.html
           retention-days: 30
 
       - name: Report Statistics and PR Comment
