--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,3 @@
-certifi==2025.10.5
-charset-normalizer==3.4.4
-idna==3.11
-requests==2.32.5
-urllib3>=2.6.0  # Updated to fix security vulnerabilities GHSA-gm62-xv2j-4w53, GHSA-2xpw-w6gg-jr37
-pyyaml>=6.0
-
-# CLI dependencies
-typer>=0.9.0
-rich>=13.0.0
-
-# Google Sheets API (optional - only needed for upload_to_sheets.py)
-google-auth>=2.23.0
-google-auth-oauthlib>=1.1.0
-google-auth-httplib2>=0.1.1
-google-api-python-client>=2.100.0
-
-# Anthropic API (optional - for AI-powered analysis via API)
-anthropic>=0.40.0
+# This file is kept for reference only
+# All dependencies are now managed in pyproject.toml
+# Use: pip install -e . to install the package with all dependencies
