--- a/config/test-aggregation-ci/test-ci-team1/pr_report_config.yaml
+++ b/config/test-aggregation-ci/test-ci-team1/pr_report_config.yaml
@@ -34,3 +34,5 @@ log_level: "WARNING"
 # Each member receives ONLY their own ID (privacy protected)
 email_anonymous_id:
   enabled: true
+
+replace_existing_reports: true
