--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ dependencies = [
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
-    "black>=23.0",
+    "black>=26.0,<27.0",
     "flake8>=6.0",
     "mypy>=1.0",
     "pre-commit>=3.0",
