--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands = {[testenv]commands}
 description = Run code quality checks (flake8, black)
 deps =
     flake8>=6.0
-    black>=23.0
+    black>=26.0,<27.0
 commands =
     flake8 impactlens tests
     black --check impactlens tests
